# fiap

./: .gitignore  CLAUDE.md  README.md
1_semestre/Chulamis_Bortola/: index.html
1_semestre/Chulamis_Bortola/css/: style.css
1_semestre/cap_11_fase_2/: index.html
1_semestre/cap_4_fase_3/: index.html  script.js  style.css
1_semestre/cap_7_python_atividade/: main.py
1_semestre/global_solutions_fase_4/: estudos.html  index.html  problemas.html  script.js  solucoes.html  style.css
1_semestre/global_solutions_fase_4/css/: style.css
1_semestre/global_solutions_fase_4/js/: primary-button.js
1_semestre/primeira_ai/: pyproject.toml
1_semestre/primeira_ai/src/: start.ipynb
2026/1-semestre/BoxApp/app/: build.gradle.kts
2026/1-semestre/BoxApp/gradle/wrapper/: gradle-wrapper.properties
2026/1-semestre/ColumnRow/app/: build.gradle.kts
2026/1-semestre/ColumnRow/gradle/wrapper/: gradle-wrapper.properties
2026/1-semestre/atividade-fase-1/: index.html
2026/1-semestre/fase-1/ColumnRow/: settings.gradle.kts
2026/1-semestre/fase-1/atividade-fase-1/: catalogo.html  doc.md  produto.html
2026/1-semestre/fase-2/atividade-fase-2/: .env  .env.example  Dockerfile  docker-compose.local.yml  docker-compose.yml  planejamento.md  texto_original.md
2026/1-semestre/fase-2/atividade-fase-2/sql/: DDL.sql  DML.sql  init.sh
2026/1-semestre/fase-2/atividade-fase-2/webapp/: catalogo.jsp  create-admin.jsp  index.jsp  login.jsp  logout.jsp  produto.jsp
tools/: package-lock.json  screenshot.js  screenshot_cart.js
(+17 files in other folders)
